// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OrderAddComponent should save 1`] = `
Object {
  "billToAddress": Object {},
  "billToAddressId": "BILL_TO_ADDRESS_ID",
  "comment": "COMMENT",
  "creditCardApprovalCode": "CREDIT_CARD_APP",
  "customer": Object {},
  "customerId": "CUSTOMER_ID",
  "date": Any<Date>,
  "dueDate": Any<Date>,
  "freight": 0,
  "id": undefined,
  "isOnlineOrder": true,
  "num": "NUM",
  "orderId": 0,
  "orderLineItems": null,
  "purchaseOrderNum": "PURCHASE_ORDER_NUM",
  "revisionNum": 0,
  "shipDate": Any<Date>,
  "shipToAddress": Object {},
  "shipToAddressId": "SHIP_TO_ADDRESS_ID",
  "shippingType": 1,
  "statusType": 0,
  "subTotal": 0,
  "taxAmt": 0,
  "totalDue": 0,
}
`;

exports[`OrderEditComponent should update 1`] = `
Object {
  "billToAddress": Object {},
  "billToAddressId": "BILL_TO_ADDRESS_ID",
  "comment": "COMMENT",
  "creditCardApprovalCode": "CREDIT_CARD_APP",
  "customer": Object {},
  "customerId": "CUSTOMER_ID",
  "date": Any<Date>,
  "dueDate": Any<Date>,
  "freight": 0,
  "id": "ID",
  "isOnlineOrder": true,
  "num": "NUM",
  "orderId": 0,
  "orderLineItems": null,
  "purchaseOrderNum": "PURCHASE_ORDER_NUM",
  "revisionNum": 0,
  "shipDate": Any<Date>,
  "shipToAddress": Object {},
  "shipToAddressId": "SHIP_TO_ADDRESS_ID",
  "shippingType": 1,
  "statusType": 0,
  "subTotal": 0,
  "taxAmt": 0,
  "totalDue": 0,
}
`;
